PLY/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> PROGRAM ID SEMICOLON dec_vars_mult dec_fun dec_class MAIN LEFTPAREN RIGHTPAREN LEFTBRACKET dec_vars_mult dec_block RIGHTBRACKET
Rule 2     dec_vars_mult -> dec_vars_idk
Rule 3     dec_vars_mult -> empty
Rule 4     dec_vars_idk -> dec_vars dec_vars_more
Rule 5     dec_vars_more -> dec_vars_idk
Rule 6     dec_vars_more -> empty
Rule 7     dec_vars -> VAR vars SEMICOLON
Rule 8     vars -> vars_simple
Rule 9     vars -> vars_complex
Rule 10    vars_simple -> type_simple vars_simple_dec
Rule 11    vars_simple_dec -> vars_simple_id vars_simple_more
Rule 12    vars_simple_more -> COMMA vars_simple_dec
Rule 13    vars_simple_more -> empty
Rule 14    vars_simple_id -> ID vars_simple_arr
Rule 15    vars_simple_arr -> LEFTKEY CTEI RIGHTKEY vars_simple_arr2
Rule 16    vars_simple_arr -> empty
Rule 17    vars_simple_arr2 -> LEFTKEY CTEI RIGHTKEY
Rule 18    vars_simple_arr2 -> empty
Rule 19    vars_complex -> type_complex vars_complex_dec
Rule 20    vars_complex_dec -> ID vars_complex_more
Rule 21    vars_complex_more -> COMMA vars_complex_dec
Rule 22    vars_complex_more -> empty
Rule 23    type_simple -> INT
Rule 24    type_simple -> FLOAT
Rule 25    type_simple -> CHAR
Rule 26    type_simple -> BOOL
Rule 27    type_complex -> FILE
Rule 28    type_complex -> ID
Rule 29    dec_fun -> dec_fun_idk
Rule 30    dec_fun -> empty
Rule 31    dec_fun_idk -> fun dec_fun_more
Rule 32    dec_fun_more -> dec_fun_idk
Rule 33    dec_fun_more -> empty
Rule 34    fun -> FUN fun_type fun_id LEFTPAREN param_pos RIGHTPAREN LEFTBRACKET dec_vars_mult dec_block RIGHTBRACKET
Rule 35    param_pos -> param
Rule 36    param_pos -> empty
Rule 37    param -> type_simple ID param_more
Rule 38    param_more -> COMMA param
Rule 39    param_more -> empty
Rule 40    fun_type -> type_simple
Rule 41    fun_type -> VOID
Rule 42    fun_return -> RETURN dec_exp_method SEMICOLON
Rule 43    dec_block -> block
Rule 44    dec_block -> empty
Rule 45    block -> statement block_more
Rule 46    block_more -> block
Rule 47    block_more -> empty
Rule 48    statement -> dec_assign
Rule 49    statement -> dec_call
Rule 50    statement -> dec_read
Rule 51    statement -> dec_write
Rule 52    statement -> dec_condition
Rule 53    statement -> dec_cycle
Rule 54    statement -> dec_method
Rule 55    statement -> fun_return
Rule 56    dec_exp -> dec_exp_s
Rule 57    dec_exp_s -> dec_term pm_op
Rule 58    pm_op -> PLUS dec_exp_s
Rule 59    pm_op -> MINUS dec_exp_s
Rule 60    pm_op -> empty
Rule 61    dec_exp_method -> dec_exp_s
Rule 62    dec_exp_method -> empty
Rule 63    dec_exp_method_call -> dec_exp_method dec_exp_method_more
Rule 64    dec_exp_method_more -> COMMA dec_exp_method_call
Rule 65    dec_exp_method_more -> empty
Rule 66    dec_term -> dec_fact md_op
Rule 67    md_op -> TIMES dec_term
Rule 68    md_op -> DIVIDE dec_term
Rule 69    md_op -> empty
Rule 70    dec_fact -> var_cte
Rule 71    dec_fact -> LEFTPAREN hyper_call RIGHTPAREN
Rule 72    hyper_call -> h_exp
Rule 73    h_exp -> s_exp ao_op
Rule 74    ao_op -> COMP_AND h_exp
Rule 75    ao_op -> COMP_OR h_exp
Rule 76    ao_op -> empty
Rule 77    s_exp -> dec_exp_s comp_op
Rule 78    comp_op -> COMP_LESS dec_exp_s
Rule 79    comp_op -> COMP_GREATER dec_exp_s
Rule 80    comp_op -> COMP_EQUAL dec_exp_s
Rule 81    comp_op -> COMP_NOTEQUAL dec_exp_s
Rule 82    comp_op -> empty
Rule 83    dec_class -> dec_class_idk
Rule 84    dec_class -> empty
Rule 85    dec_class_idk -> class_body dec_class_more
Rule 86    dec_class_more -> dec_class_idk
Rule 87    dec_class_more -> empty
Rule 88    class_body -> CLASS ID dec_inherit LEFTBRACKET PRIVATE COLON dec_vars_mult dec_fun PUBLIC COLON dec_vars_mult dec_fun RIGHTBRACKET SEMICOLON
Rule 89    dec_inherit -> COLON INHERIT ID
Rule 90    dec_inherit -> empty
Rule 91    dec_assign -> var_id ASSIGN hyper_call SEMICOLON
Rule 92    dec_call -> ID LEFTPAREN call_pos RIGHTPAREN SEMICOLON
Rule 93    dec_call_exp -> ID LEFTPAREN call_pos RIGHTPAREN
Rule 94    call_pos -> call
Rule 95    call_pos -> empty
Rule 96    call -> hyper_call call_more
Rule 97    call_more -> COMMA call
Rule 98    call_more -> empty
Rule 99    dec_read -> INCO LEFTPAREN var_id RIGHTPAREN SEMICOLON
Rule 100   dec_write -> OUTCO LEFTPAREN write RIGHTPAREN SEMICOLON
Rule 101   write -> print_sign write_more
Rule 102   write_more -> COMMA write
Rule 103   write_more -> empty
Rule 104   dec_condition -> IF LEFTPAREN hyper_call RIGHTPAREN LEFTBRACKET dec_block RIGHTBRACKET dec_else
Rule 105   dec_else -> ELSE LEFTBRACKET dec_block RIGHTBRACKET
Rule 106   dec_else -> empty
Rule 107   dec_cycle -> WHILE LEFTPAREN hyper_call RIGHTPAREN LEFTBRACKET dec_block RIGHTBRACKET
Rule 108   dec_method -> ID DOT ID LEFTPAREN dec_exp_method_call RIGHTPAREN
Rule 109   var_cte -> var_id
Rule 110   var_cte -> dec_call_exp
Rule 111   var_cte -> var_const
Rule 112   var_cte -> dec_method
Rule 113   var_const -> cte_num
Rule 114   var_const -> CHAR_DEC
Rule 115   var_const -> TRUE
Rule 116   var_const -> FALSE
Rule 117   cte_num -> CTEF
Rule 118   cte_num -> CTEI
Rule 119   cte_num -> MINUS CTEI
Rule 120   cte_num -> MINUS CTEF
Rule 121   print_sign -> hyper_call
Rule 122   print_sign -> SIGN
Rule 123   var_id -> ID
Rule 124   var_id -> ID LEFTKEY dec_exp RIGHTKEY
Rule 125   var_id -> ID LEFTKEY dec_exp RIGHTKEY LEFTKEY dec_exp RIGHTKEY
Rule 126   fun_id -> ID
Rule 127   empty -> <empty>

Terminals, with rules where they appear

ASSIGN               : 91
BOOL                 : 26
CHAR                 : 25
CHAR_DEC             : 114
CLASS                : 88
COLON                : 88 88 89
COMMA                : 12 21 38 64 97 102
COMP_AND             : 74
COMP_EQUAL           : 80
COMP_GREATER         : 79
COMP_LESS            : 78
COMP_NOTEQUAL        : 81
COMP_OR              : 75
CTEF                 : 117 120
CTEI                 : 15 17 118 119
DIVIDE               : 68
DOT                  : 108
ELSE                 : 105
FALSE                : 116
FILE                 : 27
FLOAT                : 24
FUN                  : 34
ID                   : 1 14 20 28 37 88 89 92 93 108 108 123 124 125 126
IF                   : 104
INCO                 : 99
INHERIT              : 89
INT                  : 23
LEFTBRACKET          : 1 34 88 104 105 107
LEFTKEY              : 15 17 124 125 125
LEFTPAREN            : 1 34 71 92 93 99 100 104 107 108
MAIN                 : 1
MINUS                : 59 119 120
OUTCO                : 100
PLUS                 : 58
PRIVATE              : 88
PROGRAM              : 1
PUBLIC               : 88
RETURN               : 42
RIGHTBRACKET         : 1 34 88 104 105 107
RIGHTKEY             : 15 17 124 125 125
RIGHTPAREN           : 1 34 71 92 93 99 100 104 107 108
SEMICOLON            : 1 7 42 88 91 92 99 100
SIGN                 : 122
TIMES                : 67
TRUE                 : 115
VAR                  : 7
VOID                 : 41
WHILE                : 107
error                : 

Nonterminals, with rules where they appear

ao_op                : 73
block                : 43 46
block_more           : 45
call                 : 94 97
call_more            : 96
call_pos             : 92 93
class_body           : 85
comp_op              : 77
cte_num              : 113
dec_assign           : 48
dec_block            : 1 34 104 105 107
dec_call             : 49
dec_call_exp         : 110
dec_class            : 1
dec_class_idk        : 83 86
dec_class_more       : 85
dec_condition        : 52
dec_cycle            : 53
dec_else             : 104
dec_exp              : 124 125 125
dec_exp_method       : 42 63
dec_exp_method_call  : 64 108
dec_exp_method_more  : 63
dec_exp_s            : 56 58 59 61 77 78 79 80 81
dec_fact             : 66
dec_fun              : 1 88 88
dec_fun_idk          : 29 32
dec_fun_more         : 31
dec_inherit          : 88
dec_method           : 54 112
dec_read             : 50
dec_term             : 57 67 68
dec_vars             : 4
dec_vars_idk         : 2 5
dec_vars_more        : 4
dec_vars_mult        : 1 1 34 88 88
dec_write            : 51
empty                : 3 6 13 16 18 22 30 33 36 39 44 47 60 62 65 69 76 82 84 87 90 95 98 103 106
fun                  : 31
fun_id               : 34
fun_return           : 55
fun_type             : 34
h_exp                : 72 74 75
hyper_call           : 71 91 96 104 107 121
md_op                : 66
param                : 35 38
param_more           : 37
param_pos            : 34
pm_op                : 57
print_sign           : 101
program              : 0
s_exp                : 73
statement            : 45
type_complex         : 19
type_simple          : 10 37 40
var_const            : 111
var_cte              : 70
var_id               : 91 99 109
vars                 : 7
vars_complex         : 9
vars_complex_dec     : 19 21
vars_complex_more    : 20
vars_simple          : 8
vars_simple_arr      : 14
vars_simple_arr2     : 15
vars_simple_dec      : 10 12
vars_simple_id       : 11
vars_simple_more     : 11
write                : 100 102
write_more           : 101

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . PROGRAM ID SEMICOLON dec_vars_mult dec_fun dec_class MAIN LEFTPAREN RIGHTPAREN LEFTBRACKET dec_vars_mult dec_block RIGHTBRACKET

    PROGRAM         shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (1) program -> PROGRAM . ID SEMICOLON dec_vars_mult dec_fun dec_class MAIN LEFTPAREN RIGHTPAREN LEFTBRACKET dec_vars_mult dec_block RIGHTBRACKET

    ID              shift and go to state 3


state 3

    (1) program -> PROGRAM ID . SEMICOLON dec_vars_mult dec_fun dec_class MAIN LEFTPAREN RIGHTPAREN LEFTBRACKET dec_vars_mult dec_block RIGHTBRACKET

    SEMICOLON       shift and go to state 4


state 4

    (1) program -> PROGRAM ID SEMICOLON . dec_vars_mult dec_fun dec_class MAIN LEFTPAREN RIGHTPAREN LEFTBRACKET dec_vars_mult dec_block RIGHTBRACKET
    (2) dec_vars_mult -> . dec_vars_idk
    (3) dec_vars_mult -> . empty
    (4) dec_vars_idk -> . dec_vars dec_vars_more
    (127) empty -> .
    (7) dec_vars -> . VAR vars SEMICOLON

    FUN             reduce using rule 127 (empty -> .)
    CLASS           reduce using rule 127 (empty -> .)
    MAIN            reduce using rule 127 (empty -> .)
    VAR             shift and go to state 9

    dec_vars_mult                  shift and go to state 5
    dec_vars_idk                   shift and go to state 6
    empty                          shift and go to state 7
    dec_vars                       shift and go to state 8

state 5

    (1) program -> PROGRAM ID SEMICOLON dec_vars_mult . dec_fun dec_class MAIN LEFTPAREN RIGHTPAREN LEFTBRACKET dec_vars_mult dec_block RIGHTBRACKET
    (29) dec_fun -> . dec_fun_idk
    (30) dec_fun -> . empty
    (31) dec_fun_idk -> . fun dec_fun_more
    (127) empty -> .
    (34) fun -> . FUN fun_type fun_id LEFTPAREN param_pos RIGHTPAREN LEFTBRACKET dec_vars_mult dec_block RIGHTBRACKET

    CLASS           reduce using rule 127 (empty -> .)
    MAIN            reduce using rule 127 (empty -> .)
    FUN             shift and go to state 14

    dec_fun                        shift and go to state 10
    dec_fun_idk                    shift and go to state 11
    empty                          shift and go to state 12
    fun                            shift and go to state 13

state 6

    (2) dec_vars_mult -> dec_vars_idk .

    FUN             reduce using rule 2 (dec_vars_mult -> dec_vars_idk .)
    CLASS           reduce using rule 2 (dec_vars_mult -> dec_vars_idk .)
    MAIN            reduce using rule 2 (dec_vars_mult -> dec_vars_idk .)
    ID              reduce using rule 2 (dec_vars_mult -> dec_vars_idk .)
    INCO            reduce using rule 2 (dec_vars_mult -> dec_vars_idk .)
    OUTCO           reduce using rule 2 (dec_vars_mult -> dec_vars_idk .)
    IF              reduce using rule 2 (dec_vars_mult -> dec_vars_idk .)
    WHILE           reduce using rule 2 (dec_vars_mult -> dec_vars_idk .)
    RETURN          reduce using rule 2 (dec_vars_mult -> dec_vars_idk .)
    RIGHTBRACKET    reduce using rule 2 (dec_vars_mult -> dec_vars_idk .)
    PUBLIC          reduce using rule 2 (dec_vars_mult -> dec_vars_idk .)


state 7

    (3) dec_vars_mult -> empty .

    FUN             reduce using rule 3 (dec_vars_mult -> empty .)
    CLASS           reduce using rule 3 (dec_vars_mult -> empty .)
    MAIN            reduce using rule 3 (dec_vars_mult -> empty .)
    ID              reduce using rule 3 (dec_vars_mult -> empty .)
    INCO            reduce using rule 3 (dec_vars_mult -> empty .)
    OUTCO           reduce using rule 3 (dec_vars_mult -> empty .)
    IF              reduce using rule 3 (dec_vars_mult -> empty .)
    WHILE           reduce using rule 3 (dec_vars_mult -> empty .)
    RETURN          reduce using rule 3 (dec_vars_mult -> empty .)
    RIGHTBRACKET    reduce using rule 3 (dec_vars_mult -> empty .)
    PUBLIC          reduce using rule 3 (dec_vars_mult -> empty .)


state 8

    (4) dec_vars_idk -> dec_vars . dec_vars_more
    (5) dec_vars_more -> . dec_vars_idk
    (6) dec_vars_more -> . empty
    (4) dec_vars_idk -> . dec_vars dec_vars_more
    (127) empty -> .
    (7) dec_vars -> . VAR vars SEMICOLON

    FUN             reduce using rule 127 (empty -> .)
    CLASS           reduce using rule 127 (empty -> .)
    MAIN            reduce using rule 127 (empty -> .)
    ID              reduce using rule 127 (empty -> .)
    INCO            reduce using rule 127 (empty -> .)
    OUTCO           reduce using rule 127 (empty -> .)
    IF              reduce using rule 127 (empty -> .)
    WHILE           reduce using rule 127 (empty -> .)
    RETURN          reduce using rule 127 (empty -> .)
    RIGHTBRACKET    reduce using rule 127 (empty -> .)
    PUBLIC          reduce using rule 127 (empty -> .)
    VAR             shift and go to state 9

    dec_vars                       shift and go to state 8
    dec_vars_more                  shift and go to state 15
    dec_vars_idk                   shift and go to state 16
    empty                          shift and go to state 17

state 9

    (7) dec_vars -> VAR . vars SEMICOLON
    (8) vars -> . vars_simple
    (9) vars -> . vars_complex
    (10) vars_simple -> . type_simple vars_simple_dec
    (19) vars_complex -> . type_complex vars_complex_dec
    (23) type_simple -> . INT
    (24) type_simple -> . FLOAT
    (25) type_simple -> . CHAR
    (26) type_simple -> . BOOL
    (27) type_complex -> . FILE
    (28) type_complex -> . ID

    INT             shift and go to state 23
    FLOAT           shift and go to state 24
    CHAR            shift and go to state 25
    BOOL            shift and go to state 26
    FILE            shift and go to state 27
    ID              shift and go to state 28

    vars                           shift and go to state 18
    vars_simple                    shift and go to state 19
    vars_complex                   shift and go to state 20
    type_simple                    shift and go to state 21
    type_complex                   shift and go to state 22

state 10

    (1) program -> PROGRAM ID SEMICOLON dec_vars_mult dec_fun . dec_class MAIN LEFTPAREN RIGHTPAREN LEFTBRACKET dec_vars_mult dec_block RIGHTBRACKET
    (83) dec_class -> . dec_class_idk
    (84) dec_class -> . empty
    (85) dec_class_idk -> . class_body dec_class_more
    (127) empty -> .
    (88) class_body -> . CLASS ID dec_inherit LEFTBRACKET PRIVATE COLON dec_vars_mult dec_fun PUBLIC COLON dec_vars_mult dec_fun RIGHTBRACKET SEMICOLON

    MAIN            reduce using rule 127 (empty -> .)
    CLASS           shift and go to state 33

    dec_class                      shift and go to state 29
    dec_class_idk                  shift and go to state 30
    empty                          shift and go to state 31
    class_body                     shift and go to state 32

state 11

    (29) dec_fun -> dec_fun_idk .

    CLASS           reduce using rule 29 (dec_fun -> dec_fun_idk .)
    MAIN            reduce using rule 29 (dec_fun -> dec_fun_idk .)
    PUBLIC          reduce using rule 29 (dec_fun -> dec_fun_idk .)
    RIGHTBRACKET    reduce using rule 29 (dec_fun -> dec_fun_idk .)


state 12

    (30) dec_fun -> empty .

    CLASS           reduce using rule 30 (dec_fun -> empty .)
    MAIN            reduce using rule 30 (dec_fun -> empty .)
    PUBLIC          reduce using rule 30 (dec_fun -> empty .)
    RIGHTBRACKET    reduce using rule 30 (dec_fun -> empty .)


state 13

    (31) dec_fun_idk -> fun . dec_fun_more
    (32) dec_fun_more -> . dec_fun_idk
    (33) dec_fun_more -> . empty
    (31) dec_fun_idk -> . fun dec_fun_more
    (127) empty -> .
    (34) fun -> . FUN fun_type fun_id LEFTPAREN param_pos RIGHTPAREN LEFTBRACKET dec_vars_mult dec_block RIGHTBRACKET

    CLASS           reduce using rule 127 (empty -> .)
    MAIN            reduce using rule 127 (empty -> .)
    PUBLIC          reduce using rule 127 (empty -> .)
    RIGHTBRACKET    reduce using rule 127 (empty -> .)
    FUN             shift and go to state 14

    fun                            shift and go to state 13
    dec_fun_more                   shift and go to state 34
    dec_fun_idk                    shift and go to state 35
    empty                          shift and go to state 36

state 14

    (34) fun -> FUN . fun_type fun_id LEFTPAREN param_pos RIGHTPAREN LEFTBRACKET dec_vars_mult dec_block RIGHTBRACKET
    (40) fun_type -> . type_simple
    (41) fun_type -> . VOID
    (23) type_simple -> . INT
    (24) type_simple -> . FLOAT
    (25) type_simple -> . CHAR
    (26) type_simple -> . BOOL

    VOID            shift and go to state 39
    INT             shift and go to state 23
    FLOAT           shift and go to state 24
    CHAR            shift and go to state 25
    BOOL            shift and go to state 26

    fun_type                       shift and go to state 37
    type_simple                    shift and go to state 38

state 15

    (4) dec_vars_idk -> dec_vars dec_vars_more .

    FUN             reduce using rule 4 (dec_vars_idk -> dec_vars dec_vars_more .)
    CLASS           reduce using rule 4 (dec_vars_idk -> dec_vars dec_vars_more .)
    MAIN            reduce using rule 4 (dec_vars_idk -> dec_vars dec_vars_more .)
    ID              reduce using rule 4 (dec_vars_idk -> dec_vars dec_vars_more .)
    INCO            reduce using rule 4 (dec_vars_idk -> dec_vars dec_vars_more .)
    OUTCO           reduce using rule 4 (dec_vars_idk -> dec_vars dec_vars_more .)
    IF              reduce using rule 4 (dec_vars_idk -> dec_vars dec_vars_more .)
    WHILE           reduce using rule 4 (dec_vars_idk -> dec_vars dec_vars_more .)
    RETURN          reduce using rule 4 (dec_vars_idk -> dec_vars dec_vars_more .)
    RIGHTBRACKET    reduce using rule 4 (dec_vars_idk -> dec_vars dec_vars_more .)
    PUBLIC          reduce using rule 4 (dec_vars_idk -> dec_vars dec_vars_more .)


state 16

    (5) dec_vars_more -> dec_vars_idk .

    FUN             reduce using rule 5 (dec_vars_more -> dec_vars_idk .)
    CLASS           reduce using rule 5 (dec_vars_more -> dec_vars_idk .)
    MAIN            reduce using rule 5 (dec_vars_more -> dec_vars_idk .)
    ID              reduce using rule 5 (dec_vars_more -> dec_vars_idk .)
    INCO            reduce using rule 5 (dec_vars_more -> dec_vars_idk .)
    OUTCO           reduce using rule 5 (dec_vars_more -> dec_vars_idk .)
    IF              reduce using rule 5 (dec_vars_more -> dec_vars_idk .)
    WHILE           reduce using rule 5 (dec_vars_more -> dec_vars_idk .)
    RETURN          reduce using rule 5 (dec_vars_more -> dec_vars_idk .)
    RIGHTBRACKET    reduce using rule 5 (dec_vars_more -> dec_vars_idk .)
    PUBLIC          reduce using rule 5 (dec_vars_more -> dec_vars_idk .)


state 17

    (6) dec_vars_more -> empty .

    FUN             reduce using rule 6 (dec_vars_more -> empty .)
    CLASS           reduce using rule 6 (dec_vars_more -> empty .)
    MAIN            reduce using rule 6 (dec_vars_more -> empty .)
    ID              reduce using rule 6 (dec_vars_more -> empty .)
    INCO            reduce using rule 6 (dec_vars_more -> empty .)
    OUTCO           reduce using rule 6 (dec_vars_more -> empty .)
    IF              reduce using rule 6 (dec_vars_more -> empty .)
    WHILE           reduce using rule 6 (dec_vars_more -> empty .)
    RETURN          reduce using rule 6 (dec_vars_more -> empty .)
    RIGHTBRACKET    reduce using rule 6 (dec_vars_more -> empty .)
    PUBLIC          reduce using rule 6 (dec_vars_more -> empty .)


state 18

    (7) dec_vars -> VAR vars . SEMICOLON

    SEMICOLON       shift and go to state 40


state 19

    (8) vars -> vars_simple .

    SEMICOLON       reduce using rule 8 (vars -> vars_simple .)


state 20

    (9) vars -> vars_complex .

    SEMICOLON       reduce using rule 9 (vars -> vars_complex .)


state 21

    (10) vars_simple -> type_simple . vars_simple_dec
    (11) vars_simple_dec -> . vars_simple_id vars_simple_more
    (14) vars_simple_id -> . ID vars_simple_arr

    ID              shift and go to state 43

    vars_simple_dec                shift and go to state 41
    vars_simple_id                 shift and go to state 42

state 22

    (19) vars_complex -> type_complex . vars_complex_dec
    (20) vars_complex_dec -> . ID vars_complex_more

    ID              shift and go to state 45

    vars_complex_dec               shift and go to state 44

state 23

    (23) type_simple -> INT .

    ID              reduce using rule 23 (type_simple -> INT .)


state 24

    (24) type_simple -> FLOAT .

    ID              reduce using rule 24 (type_simple -> FLOAT .)


state 25

    (25) type_simple -> CHAR .

    ID              reduce using rule 25 (type_simple -> CHAR .)


state 26

    (26) type_simple -> BOOL .

    ID              reduce using rule 26 (type_simple -> BOOL .)


state 27

    (27) type_complex -> FILE .

    ID              reduce using rule 27 (type_complex -> FILE .)


state 28

    (28) type_complex -> ID .

    ID              reduce using rule 28 (type_complex -> ID .)


state 29

    (1) program -> PROGRAM ID SEMICOLON dec_vars_mult dec_fun dec_class . MAIN LEFTPAREN RIGHTPAREN LEFTBRACKET dec_vars_mult dec_block RIGHTBRACKET

    MAIN            shift and go to state 46


state 30

    (83) dec_class -> dec_class_idk .

    MAIN            reduce using rule 83 (dec_class -> dec_class_idk .)


state 31

    (84) dec_class -> empty .

    MAIN            reduce using rule 84 (dec_class -> empty .)


state 32

    (85) dec_class_idk -> class_body . dec_class_more
    (86) dec_class_more -> . dec_class_idk
    (87) dec_class_more -> . empty
    (85) dec_class_idk -> . class_body dec_class_more
    (127) empty -> .
    (88) class_body -> . CLASS ID dec_inherit LEFTBRACKET PRIVATE COLON dec_vars_mult dec_fun PUBLIC COLON dec_vars_mult dec_fun RIGHTBRACKET SEMICOLON

    MAIN            reduce using rule 127 (empty -> .)
    CLASS           shift and go to state 33

    class_body                     shift and go to state 32
    dec_class_more                 shift and go to state 47
    dec_class_idk                  shift and go to state 48
    empty                          shift and go to state 49

state 33

    (88) class_body -> CLASS . ID dec_inherit LEFTBRACKET PRIVATE COLON dec_vars_mult dec_fun PUBLIC COLON dec_vars_mult dec_fun RIGHTBRACKET SEMICOLON

    ID              shift and go to state 50


state 34

    (31) dec_fun_idk -> fun dec_fun_more .

    CLASS           reduce using rule 31 (dec_fun_idk -> fun dec_fun_more .)
    MAIN            reduce using rule 31 (dec_fun_idk -> fun dec_fun_more .)
    PUBLIC          reduce using rule 31 (dec_fun_idk -> fun dec_fun_more .)
    RIGHTBRACKET    reduce using rule 31 (dec_fun_idk -> fun dec_fun_more .)


state 35

    (32) dec_fun_more -> dec_fun_idk .

    CLASS           reduce using rule 32 (dec_fun_more -> dec_fun_idk .)
    MAIN            reduce using rule 32 (dec_fun_more -> dec_fun_idk .)
    PUBLIC          reduce using rule 32 (dec_fun_more -> dec_fun_idk .)
    RIGHTBRACKET    reduce using rule 32 (dec_fun_more -> dec_fun_idk .)


state 36

    (33) dec_fun_more -> empty .

    CLASS           reduce using rule 33 (dec_fun_more -> empty .)
    MAIN            reduce using rule 33 (dec_fun_more -> empty .)
    PUBLIC          reduce using rule 33 (dec_fun_more -> empty .)
    RIGHTBRACKET    reduce using rule 33 (dec_fun_more -> empty .)


state 37

    (34) fun -> FUN fun_type . fun_id LEFTPAREN param_pos RIGHTPAREN LEFTBRACKET dec_vars_mult dec_block RIGHTBRACKET
    (126) fun_id -> . ID

    ID              shift and go to state 52

    fun_id                         shift and go to state 51

state 38

    (40) fun_type -> type_simple .

    ID              reduce using rule 40 (fun_type -> type_simple .)


state 39

    (41) fun_type -> VOID .

    ID              reduce using rule 41 (fun_type -> VOID .)


state 40

    (7) dec_vars -> VAR vars SEMICOLON .

    VAR             reduce using rule 7 (dec_vars -> VAR vars SEMICOLON .)
    FUN             reduce using rule 7 (dec_vars -> VAR vars SEMICOLON .)
    CLASS           reduce using rule 7 (dec_vars -> VAR vars SEMICOLON .)
    MAIN            reduce using rule 7 (dec_vars -> VAR vars SEMICOLON .)
    ID              reduce using rule 7 (dec_vars -> VAR vars SEMICOLON .)
    INCO            reduce using rule 7 (dec_vars -> VAR vars SEMICOLON .)
    OUTCO           reduce using rule 7 (dec_vars -> VAR vars SEMICOLON .)
    IF              reduce using rule 7 (dec_vars -> VAR vars SEMICOLON .)
    WHILE           reduce using rule 7 (dec_vars -> VAR vars SEMICOLON .)
    RETURN          reduce using rule 7 (dec_vars -> VAR vars SEMICOLON .)
    RIGHTBRACKET    reduce using rule 7 (dec_vars -> VAR vars SEMICOLON .)
    PUBLIC          reduce using rule 7 (dec_vars -> VAR vars SEMICOLON .)


state 41

    (10) vars_simple -> type_simple vars_simple_dec .

    SEMICOLON       reduce using rule 10 (vars_simple -> type_simple vars_simple_dec .)


state 42

    (11) vars_simple_dec -> vars_simple_id . vars_simple_more
    (12) vars_simple_more -> . COMMA vars_simple_dec
    (13) vars_simple_more -> . empty
    (127) empty -> .

    COMMA           shift and go to state 54
    SEMICOLON       reduce using rule 127 (empty -> .)

    vars_simple_more               shift and go to state 53
    empty                          shift and go to state 55

state 43

    (14) vars_simple_id -> ID . vars_simple_arr
    (15) vars_simple_arr -> . LEFTKEY CTEI RIGHTKEY vars_simple_arr2
    (16) vars_simple_arr -> . empty
    (127) empty -> .

    LEFTKEY         shift and go to state 57
    COMMA           reduce using rule 127 (empty -> .)
    SEMICOLON       reduce using rule 127 (empty -> .)

    vars_simple_arr                shift and go to state 56
    empty                          shift and go to state 58

state 44

    (19) vars_complex -> type_complex vars_complex_dec .

    SEMICOLON       reduce using rule 19 (vars_complex -> type_complex vars_complex_dec .)


state 45

    (20) vars_complex_dec -> ID . vars_complex_more
    (21) vars_complex_more -> . COMMA vars_complex_dec
    (22) vars_complex_more -> . empty
    (127) empty -> .

    COMMA           shift and go to state 60
    SEMICOLON       reduce using rule 127 (empty -> .)

    vars_complex_more              shift and go to state 59
    empty                          shift and go to state 61

state 46

    (1) program -> PROGRAM ID SEMICOLON dec_vars_mult dec_fun dec_class MAIN . LEFTPAREN RIGHTPAREN LEFTBRACKET dec_vars_mult dec_block RIGHTBRACKET

    LEFTPAREN       shift and go to state 62


state 47

    (85) dec_class_idk -> class_body dec_class_more .

    MAIN            reduce using rule 85 (dec_class_idk -> class_body dec_class_more .)


state 48

    (86) dec_class_more -> dec_class_idk .

    MAIN            reduce using rule 86 (dec_class_more -> dec_class_idk .)


state 49

    (87) dec_class_more -> empty .

    MAIN            reduce using rule 87 (dec_class_more -> empty .)


state 50

    (88) class_body -> CLASS ID . dec_inherit LEFTBRACKET PRIVATE COLON dec_vars_mult dec_fun PUBLIC COLON dec_vars_mult dec_fun RIGHTBRACKET SEMICOLON
    (89) dec_inherit -> . COLON INHERIT ID
    (90) dec_inherit -> . empty
    (127) empty -> .

    COLON           shift and go to state 64
    LEFTBRACKET     reduce using rule 127 (empty -> .)

    dec_inherit                    shift and go to state 63
    empty                          shift and go to state 65

state 51

    (34) fun -> FUN fun_type fun_id . LEFTPAREN param_pos RIGHTPAREN LEFTBRACKET dec_vars_mult dec_block RIGHTBRACKET

    LEFTPAREN       shift and go to state 66


state 52

    (126) fun_id -> ID .

    LEFTPAREN       reduce using rule 126 (fun_id -> ID .)


state 53

    (11) vars_simple_dec -> vars_simple_id vars_simple_more .

    SEMICOLON       reduce using rule 11 (vars_simple_dec -> vars_simple_id vars_simple_more .)


state 54

    (12) vars_simple_more -> COMMA . vars_simple_dec
    (11) vars_simple_dec -> . vars_simple_id vars_simple_more
    (14) vars_simple_id -> . ID vars_simple_arr

    ID              shift and go to state 43

    vars_simple_dec                shift and go to state 67
    vars_simple_id                 shift and go to state 42

state 55

    (13) vars_simple_more -> empty .

    SEMICOLON       reduce using rule 13 (vars_simple_more -> empty .)


state 56

    (14) vars_simple_id -> ID vars_simple_arr .

    COMMA           reduce using rule 14 (vars_simple_id -> ID vars_simple_arr .)
    SEMICOLON       reduce using rule 14 (vars_simple_id -> ID vars_simple_arr .)


state 57

    (15) vars_simple_arr -> LEFTKEY . CTEI RIGHTKEY vars_simple_arr2

    CTEI            shift and go to state 68


state 58

    (16) vars_simple_arr -> empty .

    COMMA           reduce using rule 16 (vars_simple_arr -> empty .)
    SEMICOLON       reduce using rule 16 (vars_simple_arr -> empty .)


state 59

    (20) vars_complex_dec -> ID vars_complex_more .

    SEMICOLON       reduce using rule 20 (vars_complex_dec -> ID vars_complex_more .)


state 60

    (21) vars_complex_more -> COMMA . vars_complex_dec
    (20) vars_complex_dec -> . ID vars_complex_more

    ID              shift and go to state 45

    vars_complex_dec               shift and go to state 69

state 61

    (22) vars_complex_more -> empty .

    SEMICOLON       reduce using rule 22 (vars_complex_more -> empty .)


state 62

    (1) program -> PROGRAM ID SEMICOLON dec_vars_mult dec_fun dec_class MAIN LEFTPAREN . RIGHTPAREN LEFTBRACKET dec_vars_mult dec_block RIGHTBRACKET

    RIGHTPAREN      shift and go to state 70


state 63

    (88) class_body -> CLASS ID dec_inherit . LEFTBRACKET PRIVATE COLON dec_vars_mult dec_fun PUBLIC COLON dec_vars_mult dec_fun RIGHTBRACKET SEMICOLON

    LEFTBRACKET     shift and go to state 71


state 64

    (89) dec_inherit -> COLON . INHERIT ID

    INHERIT         shift and go to state 72


state 65

    (90) dec_inherit -> empty .

    LEFTBRACKET     reduce using rule 90 (dec_inherit -> empty .)


state 66

    (34) fun -> FUN fun_type fun_id LEFTPAREN . param_pos RIGHTPAREN LEFTBRACKET dec_vars_mult dec_block RIGHTBRACKET
    (35) param_pos -> . param
    (36) param_pos -> . empty
    (37) param -> . type_simple ID param_more
    (127) empty -> .
    (23) type_simple -> . INT
    (24) type_simple -> . FLOAT
    (25) type_simple -> . CHAR
    (26) type_simple -> . BOOL
